# circuitos-eletricos-2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  trab1ricardosiqueira.py  trab2ricardosiqueira.py  trab4ricardosiqueira.py
.github/workflows/: tests.yml
src/: app.py
src/app/: main.py  rss_debug.py  rss_main.py  trab1ricardosiqueira.py
src/ce2/: Component.py  Current.py  Im.py  app.py  functions.py  trab1ricardosiqueira.py
src/ce2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ce2/classes/: Current.py  Gm.py  Im.py  Resistor.py
src/classes/: Component.py  Current.py  G.py  I.py  Matrix.py  Resistor.py
src/components/: Capacitor.py  Component.py  CurrentSource.py  Gm.py  Im.py  Inductor.py  Resistor.py  Transformer.py  rssTransformer.py  rss_Capacitor.py  rss_Component.py  rss_CurrentSource.py  rss_Diode.py  rss_Gm.py  rss_Im.py  rss_Inductor.py  rss_Matrix.py  rss_Resistor.py  rss_VoltageSource.py
src/functions/: file_handler.py  new_component.py  rss_backward_euler.py  rss_new_component.py  rss_newton_raphson.py
tests/: conftest.py  test_app.py
tests/assets/: netlist0.txt  netlist2.txt  netlist3.txt  netlist4.txt  netlist5.txt  netlist6.txt  netlist7.txt
tests/assets/trabalho1/: netlist1.txt  netlist2.txt
