[metadata]
name = ce2
description = ce2
author = Ricardo Siqueira
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    ce2
install_requires =
    numpy>=1
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0.1
    tox>=3.25.0
    pytest>=7.1.2
    pytest-cov>=3.0.0
    mypy>=0.950

# [options.package_data]
# ce2 = py.typed

[flake8]
max-line-length = 160